Partie Desktop finie

--- a/index.html
+++ b/index.html
@@ -94,19 +94,32 @@
           <h3>Acquises</h3>
           <ul class="CP-A">
             <li><img src="./assets/Icon/HTML5.jpg" alt="Logo HTML" />HTML</li>
+            <li><img src="./assets/Icon/CSS.svg" alt="Logo CSS" />CSS</li>
+
           </ul>
         </article>
         <article>
           <h3>En cours d'acquisition</h3>
           <ul class="CP-ECA">
-            <li><img src="./assets/Icon/CSS.svg" alt="Logo CSS" />CSS</li>
             <li><img src="./assets/Icon/JS.jpg" alt="Logo JS" />JavaScript</li>
+            <li>
+              <img src="./assets/Icon/GIT.svg" alt="Logo Git" />
+              Git
+            </li>
+            <li>
+              <img
+                src="./assets/Icon/github-brands-solid.svg"
+                alt="Logo GitGithub"
+              />
+              GitGithub
+            </li>
           </ul>
         </article>
         <article>
           <h3>Au programme</h3>
           <ul class="CP-AP">
-            <li>
+            <div class="CP-AP1">
+              <li>
               <img
                 src="./assets/Icon/rest-api-blue-logo-22098.png"
                 alt="Logo API REST"
@@ -119,62 +132,63 @@
               />Create React App
             </li>
             <li>
-              <img src="./assets/Icon/Devtools.svg" alt="Logo DevTools" />DevTools
+              <img
+                src="./assets/Icon/Devtools.svg"
+                alt="Logo DevTools"
+              />DevTools
             </li>
             <li>
               <img
                 src="./assets/Icon/icons8-express-js-50.png"
                 alt="Logo Express"
               />Express
+            </li> 
+            </div>
+           <div>
+             <li>
+              <img
+                src="./assets/Icon/agile.png"
+                alt="Logo Méthode Agile"
+              />Méthode AGILE
             </li>
             <li>
-              <img src="./assets/Icon/GIT.svg" alt="Logo Git" />
-              Git
+              <img src="./assets/Icon/mongodb.svg" alt="Logo MongoDB" />MongoDB
             </li>
-            <li>
-              <img src="./assets/Icon/github-brands-solid.svg" alt="Logo GitGithub" />
-              GitGithub
-            </li>
-            <li>
-              <img src="./assets/Icon/agile.png" alt="Logo Méthode Agile" />Méthode
-              AGILE
-            </li>
-            <li><img src="./assets/Icon/mongodb.svg" alt="Logo MongoDB" />MongoDB</li>
 
-            <li><img src="./assets/Icon/node-js.svg" alt="Logo Node.js" />Node.js</li>
+            <li>
+              <img src="./assets/Icon/node-js.svg" alt="Logo Node.js" />Node.js
+            </li>
+           </div>
           </ul>
         </article>
       </section>
       <!-- Le carrousel des loisirs -->
-      <section class="carrousel" id="carrousel">
+      <section id="carrousel">
         <h2 id="Carrousel">Le carrousel des loisirs</h2>
+        <h3>La capoeira</h3>
         <div class="carrouselMove">
-          <h3>La capoeira</h3>
-          <div class="carrouselArrow">
-            <input
-              type="image"
-              id="arrow_left"
-              src="./assets/Icon/arrow_left.svg"
-              alt="arrow left"
-            />
-            <input
-              type="image"
-              id="arrow_right"
-              src="./assets/Icon/arrow_right.svg"
-              alt="arrow right"
-            />
-          </div>
-          <div>
-              <p>Développer ma capacité d'improvisation.</p>
-          <ul id="dots">
-            <li class="dot dot_selected"></li>
-            <li class="dot"></li>
-            <li class="dot"></li>
-            <li class="dot"></li>
-          </ul>
-          </div>
-         
+          <input
+            type="image"
+            id="arrow_left"
+            src="./assets/Icon/arrow_left.svg"
+            alt="arrow left"
+          />
+          <img src="./assets/Images/slide/slide1.jpg" alt="slide caroussel" />
+          <input
+            type="image"
+            id="arrow_right"
+            src="./assets/Icon/arrow_right.svg"
+            alt="arrow right"
+          />
         </div>
+        
+        <p>Développer ma capacité d'improvisation.</p>
+        <ul id="dots">
+          <li class="dot dot_selected"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+        </ul>
       </section>
     </main>
     <footer>
@@ -184,13 +198,19 @@
             href="https://www.linkedin.com/in/pierre-nouhen-594684204/"
             target="_blank"
           >
-            <img src="./assets/Icon/linkedin-brands-solid.svg" alt="Logo Linkedin" />
+            <img
+              src="./assets/Icon/linkedin-brands-solid.svg"
+              alt="Logo Linkedin"
+            />
             <p>Linkedin</p>
           </a>
         </li>
         <li>
           <a href="https://github.com/pnouhen" target="_blank"
-            ><img src="./assets/Icon/github-brands-solid.svg" alt="Logo GitHub" />
+            ><img
+              src="./assets/Icon/github-brands-solid.svg"
+              alt="Logo GitHub"
+            />
             <p>Github</p></a
           >
         </li>
