Partie mobile finie

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>
             <a href="#Carrousel">Le carrousel<br />des loisirs</a>
           </li>
-          <li><a href="./assets/CV/CV_général.pdf" target="_blank">CV</a></li>
+          <li><a href="./assets/CV/CV général.pdf" target="_blank">CV</a></li>
         </ul>
       </nav>
     </header>
@@ -116,49 +116,39 @@
         </article>
         <article>
           <h3>Au programme</h3>
-          <ul class="CP-AP">
-            <div class="CP-AP1">
-              <li>
-              <img
-                src="./assets/Icon/rest-api-blue-logo-22098.png"
-                alt="Logo API REST"
-              />API REST
-            </li>
-            <li>
-              <img
+          <div class="CP-AP">
+            <ul class="CP-AP1">
+              <li><img
                 src="./assets/Icon/react-brands-solid.svg"
                 alt="Logo Create React App"
-              />Create React App
-            </li>
-            <li>
-              <img
+              />Create React App</li>
+              <li><img
                 src="./assets/Icon/Devtools.svg"
                 alt="Logo DevTools"
-              />DevTools
-            </li>
-            <li>
-              <img
+              />DevTools</li>
+              <li>              <img src="./assets/Icon/node-js.svg" alt="Logo Node.js" />Node.js
+              </li>
+            </ul>
+            <ul>
+              <li><img
+                src="./assets/Icon/rest-api-blue-logo-22098.png"
+                alt="Logo API REST"
+              />API REST</li>
+              <li><img
                 src="./assets/Icon/icons8-express-js-50.png"
                 alt="Logo Express"
-              />Express
-            </li> 
-            </div>
-           <div>
-             <li>
-              <img
+              />Express</li>
+              <li>
+              <img src="./assets/Icon/mongodb.svg" alt="Logo MongoDB" />MongoDB</li>
+                         
+            </ul>
+            <div><img
                 src="./assets/Icon/agile.png"
                 alt="Logo Méthode Agile"
-              />Méthode AGILE
-            </li>
-            <li>
-              <img src="./assets/Icon/mongodb.svg" alt="Logo MongoDB" />MongoDB
-            </li>
-
-            <li>
-              <img src="./assets/Icon/node-js.svg" alt="Logo Node.js" />Node.js
-            </li>
-           </div>
-          </ul>
+              />
+              <p>Méthode AGILE</p>
+            </div>
+          </div>
         </article>
       </section>
       <!-- Le carrousel des loisirs -->
