--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV Pierre NOUHEN</title>
+    <title>Portfolio Pierre NOUHEN</title>
     <link href="./assets/style.css" rel="stylesheet" />
     <script src="./assets/script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
