Modifications sur A propos, Compétences et Savoir-être

--- a/index.html
+++ b/index.html
@@ -60,18 +60,19 @@
         <h2 id="Apropos">A propos</h2>
         <p>
           Après avoir <strong>travaillé plus de sept ans</strong> dans le
-          secteur de l’élevage, j’ai décidé de faire une
-          <strong>reconversion professionnelle</strong>. Pour ce faire, j’ai
-          réalisé un <strong>bilan de compétence</strong> où j’ai pu réaliser
-          que le métier de Développeur web et web mobile me correspond. Je suis
-          toujours intéressé par les nouvelles technologies et l’informatique.
-          Ce métier permettant de développer des interfaces web adaptées aux
-          besoins de son client sera une nouvelle étape dans cette passion.
+          secteur de l’élevage, j’ai décidé d'opter pour une
+          <strong>reconversion professionnelle</strong>. Dans cette perspective,
+          j’ai effectué un <strong>bilan de compétences</strong> où j’ai pu
+          réaliser que le métier de Développeur web et web mobile me correspond.
+          Je suis toujours intéressé par les nouvelles technologies et
+          l’informatique. Ce métier permettant de développer des interfaces web
+          adaptées aux besoins de son client sera une nouvelle étape dans cette
+          passion.
         </p>
       </section>
-      <!-- Savoirs être Professionnels -->
+      <!-- Savoir-être Professionnels -->
       <section class="SEP">
-        <h2 id="SEP">Savoirs être Professionnels</h2>
+        <h2 id="SEP">Savoir-être Professionnels</h2>
         <ul>
           <li>Méthodique & Rigoureux</li>
           <li>Autonome & Indépendant dans la réalisation de ses missions</li>
@@ -94,7 +95,7 @@
           <ul class="CP-A">
             <li><img src="./assets/Icon/HTML5.jpg" alt="Logo HTML" />HTML</li>
             <li><img src="./assets/Icon/CSS.svg" alt="Logo CSS" />CSS</li>
-
+            <li><img src="./assets/Icon/sass-brands-solid.svg" alt="Logo SASS" class="sass"/>SASS</li>
           </ul>
         </article>
         <article>
@@ -118,34 +119,47 @@
           <h3>Au programme</h3>
           <div class="CP-AP">
             <ul class="CP-AP1">
-              <li><img
-                src="./assets/Icon/react-brands-solid.svg"
-                alt="Logo Create React App"
-              />Create React App</li>
-              <li><img
-                src="./assets/Icon/Devtools.svg"
-                alt="Logo DevTools"
-              />DevTools</li>
-              <li>              <img src="./assets/Icon/node-js.svg" alt="Logo Node.js" />Node.js
+              <li>
+                <img
+                  src="./assets/Icon/react-brands-solid.svg"
+                  alt="Logo Create React App"
+                />Create React App
+              </li>
+              <li>
+                <img
+                  src="./assets/Icon/Devtools.svg"
+                  alt="Logo DevTools"
+                />DevTools
+              </li>
+              <li>
+                <img
+                  src="./assets/Icon/node-js.svg"
+                  alt="Logo Node.js"
+                />Node.js
               </li>
             </ul>
             <ul>
-              <li><img
-                src="./assets/Icon/rest-api-blue-logo-22098.png"
-                alt="Logo API REST"
-              />API REST</li>
-              <li><img
-                src="./assets/Icon/icons8-express-js-50.png"
-                alt="Logo Express"
-              />Express</li>
               <li>
-              <img src="./assets/Icon/mongodb.svg" alt="Logo MongoDB" />MongoDB</li>
-                         
+                <img
+                  src="./assets/Icon/rest-api-blue-logo-22098.png"
+                  alt="Logo API REST"
+                />API REST
+              </li>
+              <li>
+                <img
+                  src="./assets/Icon/icons8-express-js-50.png"
+                  alt="Logo Express"
+                />Express
+              </li>
+              <li>
+                <img
+                  src="./assets/Icon/mongodb.svg"
+                  alt="Logo MongoDB"
+                />MongoDB
+              </li>
             </ul>
-            <div><img
-                src="./assets/Icon/agile.png"
-                alt="Logo Méthode Agile"
-              />
+            <div>
+              <img src="./assets/Icon/agile.png" alt="Logo Méthode Agile" />
               <p>Méthode AGILE</p>
             </div>
           </div>
@@ -170,7 +184,7 @@
             alt="arrow right"
           />
         </div>
-        
+
         <p>Développer ma capacité d'improvisation.</p>
         <ul id="dots">
           <li class="dot dot_selected"></li>
