Modification du CV

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </section>
       <!-- Compétences -->
       <section class="CP">
-        <h2 id="Compétences">Compétences:</h2>
+        <h2 id="Compétences">Compétences</h2>
         <article>
           <h3>Acquises</h3>
           <ul class="CP-A">
